kubernetes/charts/traefik/test/nginx.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/gateway.networking.k8s.io/httproute-v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: traefik-system
spec:
  parentRefs:
    - name: traefik-external
      namespace: traefik-system
      sectionName: websecure
  hostnames:
    - nginx-10-242-20-188.lab-local.bichls.dev
    - nginx-10-242-20-189.lab-local.bichls.dev
  rules:
    - backendRefs:
        - name: nginx
          namespace: traefik-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/core/service-v1.json

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: traefik-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/apps/deployment-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: traefik-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
        - name: nginx
          image: traefik/whoami:latest
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 100Mi
